--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ html {
 }
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
   max-width: 414px;
   height: 896px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   margin: auto;
   background: #ffffff;
   box-sizing: border-box;
@@ -101,6 +102,8 @@ h1 {
 
 form {
 display: flex;
+height: 613px;
+justify-content: flex-end;
 flex-direction: column;
 position: relative;
 color: #172333;
@@ -122,10 +125,12 @@ color: #172333;
 
 .sub {
   display: flex;
+  margin-top: 148.5px;
   width: 100%;
   box-sizing: border-box;
-  margin-top: 148.5px;
-  padding: 15.5px 128.5px;
+  bottom: 0;
+  width: 350px;
+  height: 48px;
   border-radius: 4px;
   background-color: #5fad56;
   outline: none;
@@ -138,7 +143,6 @@ color: #172333;
   letter-spacing: normal;
   color: #ffffff;
   justify-content: center;
-  
 }
 
 ::-webkit-input-placeholder {
