finally final changes

--- a/style.css
+++ b/style.css
@@ -145,8 +145,7 @@ color: #172333;
   width: 100%;
   box-sizing: border-box;
   bottom: 0;
-  width: 350px;
-  height: 48px;
+  padding: 15.5px 128.5px;
   border-radius: 4px;
   background-color: #5fad56;
   outline: none;
